# mediabox

./: .doxygen  .gitignore  .stignore  Cargo.toml  Makefile  README.md  apt.dev  apt.txt  rc
all/: all.br  all.kernel
app/: mediabox.br  mediabox.kernel  mediabox.mk
arch/: i386.br  i386.kernel  i386.mk
blender/: about.txt  mediabox.blend  nothing.blend
browser/: Cargo.toml
buildroot-2023.05.1/: .config
config/: Cargo.toml
config/src/: lib.rs
cpu/: i686.br  i686.kernel  i686.mk
debiabox/ssh/: id_ed25519  id_ed25519.pub  rc
hw/: qemu386.kernel  qemu386.mk
lib/: Cargo.toml
lib/src/: lib.rs
root/boot/: isolinux.cfg
root/etc/: inittab
root/etc/init.d/: S99hostinfo  S99wayland
root/etc/profile.d/: wayland.sh
root/etc/xdg/weston/: weston.ini
sdl/: Cargo.toml
server/: Cargo.toml
server/src/: http.lalrpop  main.rs
server/static/: about.html  css.css  manifest
server/template/: html.head1  html.head2  index.html.head  index.html.tail
src/: lib.rs
