[package]
name    = "server"
version = "0.0.1"
edition = "2021"

description = "Interactive Media Engine: server"
authors     = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
license     = "MIT"

[dependencies]
lib    = { path = "../lib"    }
config = { path = "../config" }

lalrpop-util = { version = "0.20.0", features = ["lexer"] }

[build-dependencies]
lalrpop = "0.20.0"
